...
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginemail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/oceanblue"
        app:helperText=""
        app:helperTextTextColor="#F00000"
        app:layout_constraintBottom_toTopOf="@id/loginpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="Email"
...
        app:helperTextTextColor="#F00000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="10dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginpassword"
        android:layout_marginTop="140dp"
        android:text="Login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="login"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Time User?"
...
