...
            android:text="Write a Review"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Review Text Input -->
        <RatingBar
            android:id="@+id/review_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:numStars="5"
            android:progressTint="@color/oceanblue"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:stepSize="1" />

        <EditText
            android:id="@+id/review_text_input"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_box"
            android:gravity="top"
            android:hint="Share details of your experience at this place"
            android:inputType="textMultiLine"
...
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/review_submit_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_box_dark"
            android:text="Post"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>

