...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingBottom="100dp"
        android:id="@+id/beach_view">

        <!-- TextView for the title -->
        <TextView
            android:id="@+id/beach_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:text="Overview"
                android:textColor="@color/oceanblue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp" />

            <TextView
...
